--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
 {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dependencies": {
+        "express": "^4.18.2",
+        "mysql2": "^3.6.0",
+        "sequelize": "^6.32.1"
+    }
 }
