--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "start": "node server.js",
     "dependencies": {
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mysql2": "^3.6.0",
         "sequelize": "^6.32.1"
