--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "start": "node server.js",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mysql2": "^3.6.0",
